@@ -30,6 +30,10 @@ Bugfix
      to not annihilate fatal errors in authentication mode
      MBEDTLS_SSL_VERIFY_OPTIONAL and to reflect bad EC curves
      within verification result.
+   * Fix setting version TLSv1 as minimal version, even if TLS 1
+     is not enabled. Set `MBEDTLS_SSL_MIN_MAJOR_VERSION`
+     and `MBEDTLS_SSL_MIN_MINOR_VERSION` instead
+     of `MBEDTLS_SSL_MAJOR_VERSION_3` and `MBEDTLS_SSL_MINOR_VERSION_1`
 
 Changes
    * Clarify ECDSA documentation and improve the sample code to avoid
